--- a/TODO
+++ b/TODO
@@ -5,7 +5,15 @@
  - 형태소 분석의 결과에 리스트 형태 전달 또는 결과값(dictionary)에 추가하기
 
 2. 신규 구현할 기능
- - 비표준 단어 집계
+ 2.1. termParse
+   - 비표준 단어 집계
+   - 기본적으로 활용할 수 있는 단어사전 생성
+ 2.2. termManager
+   - 기능정의 필요
+ 2.3. domainManager
+   - 기능정의 필요
+ 2.4. codeManager
+   - 기능정의 필요
 
 3. 별도 제공할 문서
  - API 구현
