--- a/TODO
+++ b/TODO
@@ -10,7 +10,8 @@
    - 비표준 단어 집계
    - 기본적으로 활용할 수 있는 단어사전 생성
  2.2. wordManager
-   - 참조사전 다운로드 기능
+   - 참조사전 다운로드
+   - 검증조건 출력 및 변경
  2.2. termManager
    - 기능정의 필요
  2.3. domainManager
