--- a/TODO
+++ b/TODO
@@ -1,18 +1,17 @@
 1. 반영(변경)해야할 기능
- - Multi Insert시 전체에 문제가 없을때 반영하기. 단어사전 백업하고 오류 발생하면 복원시키기
- - 형태소 분석시 Dictionary Sync 변수 만들어, 데이터 반영 횟수 줄이기
- - Multi 형태소 분석시, 중복되는 단어는 한번만 파싱할 수 있도록 변경
- - 형태소 분석의 결과에 리스트 형태 전달 또는 결과값(dictionary)에 추가하기
+ - 형태소 분석시 Dictionary Sync 변수 만들어, 데이터 반영 횟수 줄이기 -> 완료
+ - Multi 형태소 분석시, 중복되는 단어는 한번만 파싱할 수 있도록 변경 -> 제외
+ - 형태소 분석의 결과에 리스트 형태 전달 또는 결과값(dictionary)에 추가하기 -> 완료
 
 2. 신규 구현할 기능
  
  2.1. termParser
-   - 비표준 단어 집계
+   - 비표준 단어 집계 -> 완료
    - 기본적으로 활용할 수 있는 단어사전 생성
  2.2. wordManager
    - 참조사전 다운로드
    - 검증조건 출력 및 변경
-   - 단어 MultiInsert시에 오류난 대상은 출력하고, return을 통해 오류난 행은 다시 전달함
+   - 단어 MultiInsert시에 오류난 대상은 출력하고, return을 통해 오류난 행은 다시 전달함 -> 완료
  2.2. termManager
    - 기능정의 필요
  2.3. domainManager
