--- a/TODO
+++ b/TODO
@@ -1,24 +1,26 @@
+0.0.4 추가 기능
+ - 형태소 분석시 Dictionary Sync 변수 만들어, 데이터 반영 횟수 줄이기
+ - 형태소 분석의 결과에 리스트 형태 전달 또는 결과값(dictionary)에 추가하기
+ - 단어 MultiInsert시에 오류난 대상은 출력하고, return을 통해 오류난 행은 다시 전달
+ - 비표준 단어 집계 기능
+   
 1. 반영(변경)해야할 기능
- - 형태소 분석시 Dictionary Sync 변수 만들어, 데이터 반영 횟수 줄이기 -> 완료
- - Multi 형태소 분석시, 중복되는 단어는 한번만 파싱할 수 있도록 변경 -> 제외
- - 형태소 분석의 결과에 리스트 형태 전달 또는 결과값(dictionary)에 추가하기 -> 완료
+ - 
 
 2. 신규 구현할 기능
- 
  2.1. termParser
-   - 비표준 단어 집계 -> 완료
    - 기본적으로 활용할 수 있는 단어사전 생성
  2.2. wordManager
    - 참조사전 다운로드
    - 검증조건 출력 및 변경
-   - 단어 MultiInsert시에 오류난 대상은 출력하고, return을 통해 오류난 행은 다시 전달함 -> 완료
+   - 데이터 삭제, 변경 기능
+   - MultiInsert시 all_replace 기능 제공(실시간연동시 필요)
  2.2. termManager
    - 기능정의 필요
  2.3. domainManager
    - 기능정의 필요
  2.4. codeManager
    - 기능정의 필요
- 
 
 3. 별도 제공할 문서
  - API 구현
