--- a/TODO
+++ b/TODO
@@ -11,7 +11,8 @@
 - MultiInsert시 replace 기능 추가
 - 단어 변경, 삭제 기능 추가
 - 검증조건 출력 및 변경
-- 물리명연결방식문자 조정 
+- 물리명연결방식문자 조정
+- 물리약어 -> 물리명으로 변경
 
 
 2. 신규 구현할 기능
@@ -21,8 +22,31 @@
    - 참조사전 다운로드   
  2.2. termManager
    - 기능정의 필요
+   - 용어 등록 : 
+    1) 논리명
+    2) 물리명
+    3) 용어설명
+   - 용어 검증 : 
+   - 용어 등록 조정 : 
+   - 용어 수정 및 삭제 : 
+   - 용어 조회 : 
+
  2.3. domainManager
-   - 기능정의 필요
+   - 도메인 그룹 : 도메인그룹명과 코드, 설명
+    1) 도메인 그룹 등록, 수정 및 삭제
+    2) 도메인 그룹 유일성 기준 : 도메인그룹명
+    3) 도메인그룹내 도메인 유일성 검증 방식 : (1) 도메인명, (2) 도메인명 + 길이 + 소수점
+   - 도메인 : 도메인명, 도메인설명, 데이터타입, 길이, 소수점, 도메인명단어조합, 도메인그룹정의, 
+    1) 도메인 등록, 수정, 삭제
+    2) 도메인 검증, 조정
+    3) 유일성 기준 : 기본은 도메인 + 데이터형식 + 길이 + 소수점
+   - 데이터형식: 고정문자, 가변문자, 정수, 실수, 날짜, 정밀날짜, 바이너리, LOB 
+    1) 데이터 타입 등록, 수정, 삭제
+   - DBMS : DBMS명 관리
+    1) DBMS명 : Oracle, MySQL, MariaDB, SQL-Server, PostgreSQL
+    2) DBMS에 데이터형식과 데이터타입을 매핑할 수 있도록 함.
+   
+    
  2.4. codeManager
    - 기능정의 필요
 
