--- a/TODO
+++ b/TODO
@@ -17,19 +17,16 @@
 
 2. 신규 구현할 기능
  2.1. termParser
-   - 기본적으로 활용할 수 있는 단어사전 생성
+   - 없음
  2.2. wordManager
-   - 참조사전 다운로드   
+   - 참조사전 다운로드(기본적으로 활용할 수 있는 단어사전 생성)
+   - 단어 검색 기능
+ 
  2.2. termManager
-   - 기능정의 필요
-   - 용어 등록 : 
-    1) 논리명
-    2) 물리명
-    3) 용어설명
-   - 용어 검증 : 
-   - 용어 등록 조정 : 
-   - 용어 수정 및 삭제 : 
-   - 용어 조회 : 
+   - 용어 : 논리명, 물리명, 용어설명, 도메인매핑(도메인명, 데이터형식, 길이, 소수점)
+    1) 용어 입력, 수정 및 삭제
+    2) 용어 검증, 조정
+    3) 용어 조회 기능
 
  2.3. domainManager
    - 도메인 그룹 : 도메인그룹명과 코드, 설명
@@ -46,9 +43,15 @@
     1) DBMS명 : Oracle, MySQL, MariaDB, SQL-Server, PostgreSQL
     2) DBMS에 데이터형식과 데이터타입을 매핑할 수 있도록 함.
    
-    
  2.4. codeManager
-   - 기능정의 필요
+   - 코드 인스턴스 : 코드명, 코드값, 정렬순서, 사용자정의항목1~10, 사용자정의항목데이터형식1~10, 사용자정의값1~10 (문자형식만 제공)
+   - 공통코드 인터페이스 양식 전달
+
+ 2.5. caseTool(Mapper?, Sync?)
+ 
+ 2.6. DQ검사
+ 
+ 2.7. DBMS검사(감시)
 
 3. 별도 제공할 문서
  - API 구현
