--- a/TODO
+++ b/TODO
@@ -56,3 +56,21 @@
 3. 별도 제공할 문서
  - API 구현
  - 준실시간 데이터 연동
+
+
+예제 작성
+1. 기본 사용법(설치)
+ 1.1. 설치
+ 1.2. 단어 등록
+ 1.3. 용어 분석
+ 1.4. 용어 등록
+ 1.5. 도메인 등록
+2. 활용
+ 2.1. restfulAPI 사용
+ 2.2. 실시간 DB 연동
+
+
+
+
+
+
