--- a/TODO
+++ b/TODO
@@ -29,10 +29,10 @@
     3) 용어 조회 기능
 
  2.3. domainManager
-   - 도메인 그룹 : 도메인그룹명과 코드, 설명
+   - 도메인 그룹 : 도메인그룹명과 코드, 설명, 도메인검증기준(도메인명, 도메인명+타입+길이, 도메인명조합방식)
     1) 도메인 그룹 등록, 수정 및 삭제
     2) 도메인 그룹 유일성 기준 : 도메인그룹명
-    3) 도메인그룹내 도메인 유일성 검증 방식 : (1) 도메인명, (2) 도메인명 + 길이 + 소수점
+    3) 도메인그룹내 도메인 유일성 검증 방식 : (1)도메인명, (2)도메인명+길이+소수점
    - 도메인 : 도메인명, 도메인설명, 데이터타입, 길이, 소수점, 도메인명단어조합, 도메인그룹정의, 
     1) 도메인 등록, 수정, 삭제
     2) 도메인 검증, 조정
@@ -41,21 +41,21 @@
     1) 데이터 타입 등록, 수정, 삭제
    - DBMS : DBMS명 관리
     1) DBMS명 : Oracle, MySQL, MariaDB, SQL-Server, PostgreSQL
-    2) DBMS에 데이터형식과 데이터타입을 매핑할 수 있도록 함.
+    2) DBMS에 데이터형식과 데이터타입을 매핑할 수 있도록 함
    
  2.4. codeManager
-   - 코드 인스턴스 : 코드명, 코드값, 정렬순서, 사용자정의항목1~10, 사용자정의항목데이터형식1~10, 사용자정의값1~10 (문자형식만 제공)
-   - 공통코드 인터페이스 양식 전달
+   - 코드 그룹 : 코드그룹아이디, 코드그룹명, 
+   - 코드 : 코드값, 코드명, 정렬순서, 사용자정의항목1~10, 사용자정의항목데이터형식1~10, 사용자정의값1~10 (문자형식만 제공)
+   - 코드 그룹 등록, 수정, 삭제, 검증, 조정
+   - 코드 인스턴스 등록, 수정, 삭제, 검증, 조정
+   - 코드 인터페이스 양식 전달   
+    => 1) '코드그룹'에 사용자가 입력받아야 하는 항목을 정의할 수 있도록 함. (ex: 코드업무명)
 
  2.5. caseTool(Mapper?, Sync?)
  
  2.6. DQ검사
  
  2.7. DBMS검사(감시)
-
-3. 별도 제공할 문서
- - API 구현
- - 준실시간 데이터 연동
 
 
 예제 작성
