--- a/TODO
+++ b/TODO
@@ -37,6 +37,7 @@
     1) 도메인 등록, 수정, 삭제
     2) 도메인 검증, 조정
     3) 유일성 기준 : 기본은 도메인 + 데이터형식 + 길이 + 소수점
+    4) 도메인명 부여 방식 (Unique 보장 : 접수번호V10)
    - 데이터형식: 고정문자, 가변문자, 정수, 실수, 날짜, 정밀날짜, 바이너리, LOB 
     1) 데이터 타입 등록, 수정, 삭제
    - DBMS : DBMS명 관리
