--- a/TODO
+++ b/TODO
@@ -70,8 +70,8 @@
  2.1. restfulAPI 사용
  2.2. 실시간 DB 연동
 
-
-
+참고자료(행정표준) : 
+https://www.google.co.kr/url?sa=t&source=web&rct=j&url=https://www.mois.go.kr/cmm/fms/FileDown.do%3FatchFileId%3DFILE_000000000051072%26fileSn%3D1&ved=2ahUKEwiD6_KsobH6AhVXl1YBHdhbB8gQFnoECDAQAQ&usg=AOvVaw1624A7HinXTI_QI6Nn0zbX
 
 
 
